--- a/package.json
+++ b/package.json
@@ -30,8 +30,10 @@
     "react-native-image-filter-kit": "^0.8.0",
     "react-native-paper": "^5.12.3",
     "react-native-reanimated": "~3.6.2",
+    "react-native-reanimated-carousel": "^3.5.1",
     "react-native-safe-area-context": "^4.10.1",
     "react-native-screens": "~3.29.0",
+    "react-native-shadow": "^1.2.2",
     "react-native-shadow-2": "^7.0.8",
     "react-native-sqlite-storage": "^6.0.1",
     "react-native-svg": "^15.2.0",
